[package]
name = "r2d2-example"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2"
actix-web = "1.0.0"

futures = "0.1"
env_logger = "0.6"
uuid = { version = "0.7", features = ["v4"] }

r2d2 = "0.8"
r2d2_postgres = "0.14.0"
tokio-postgres = "0.4.0-rc.2"
postgres = "0.16.0-rc.1"

dotenv = "0.14.1"

